# strathon

./: .bandit  .dockerignore  .env.example  .gitignore  .gitleaks.toml  .strathon-forbidden-words.example  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSING.md  Makefile  NOTICE  README.md  SECURITY.md  docker-compose.prod.yml  docker-compose.yml  squash.sh
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  dependabot.yml
benchmarks/: README.md  loadtest.py
cli/: LICENSE  README.md  pyproject.toml
cli/strathon_cli/: __init__.py  client.py  main.py
dashboard/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
docker/: supervisord.conf
docs/: README.md  analytics.md  api_keys.md  approvals.md  audit.md  budgets.md  cel-reference.md  cli.md  compliance-mapping.md  concepts.md  egress-locking.md  egress.md  getting-started.md  intervention.md  mcp.md  metrics.md  observability.md  owasp.md  projects.md  rbac.md  scope.md  (+7 more)
receiver/: .dockerignore  .env.example  Dockerfile  admin_cli.py  alembic.ini  approval_reaper.py  auth.py  budget_monitor.py  circuit_breaker.py  config.py  credential_patterns.py  database.py  egress_proxy.py  encryption.py  entitlements.py  heartbeat.py  incident_detector.py  key_reaper.py  logging_config.py  main.py  mcp_gateway.py  metrics.py  middleware.py  password.py  policies.py  policies_eval.py  policy_cache.py  policy_conflicts.py  policy_templates.py  pricing.py  pyproject.toml  rate_limit.py  rbac.py  redaction.py  retention.py  retention_cleanup.py  sampling.py  sarif_output.py  security_auto.py  spans_worker.py  (+1 more)
receiver/alembic/: env.py
receiver/alembic/versions/: 001_initial_schema.py  002_policy_tables.py  003_seed_dev_api_key.py  004_api_key_scopes.py  005_webhook_deliveries.py  006_redaction_config.py  007_budgets_and_costs.py  008_throttle_action.py  009_allow_action.py  010_audit_log_infrastructure.py  011_spans_attributes_gin_index.py  012_partition_spans.py  013_policy_versions.py  014_spans_full_text_search.py  015_rbac_users_sessions.py  016_key_rotation_expiration.py  017_policy_metrics_cost_attribution.py  018_shadow_mode.py  019_human_approval.py  020_multi_party_approval.py  021_security_hardening.py  022_mfa_password_reset.py  023_notification_channels.py  024_security_hardening_auto.py  025_force_password_invitations.py  026_organizations.py  027_pending_ownership_transfer.py  028_approval_agent_name.py
receiver/api/: __init__.py  _deps.py  agent_inventory.py  analytics.py  api_keys.py  approvals.py  audit.py  auth_endpoints.py  budgets.py  compliance_export.py  cost_forecast.py  costs.py  dashboard_convenience.py  data_export.py  github_integration.py  halts.py  health.py  intervention.py  mcp.py  members.py  model_prices.py  notification_channels.py  policies.py  policy_generate.py  policy_suggestions.py  policy_templates.py  project_settings.py  projects.py  security_tools.py  simulate.py  spans.py  topology.py  traces.py  webhook_deliveries.py  webhook_signing_keys.py
receiver/audit/: __init__.py  actions.py  canonical.py  hash_chain.py  redaction.py  scim_filter.py  worker.py
receiver/data/: model_prices.json
receiver/integrations/: __init__.py  discord.py  dispatcher.py  slack.py
receiver/models/: __init__.py  approvals.py  audit.py  base.py  core.py  git.py  identity.py  intervention.py  notifications.py  policies.py  traces.py  webhooks.py
receiver/repositories/: __init__.py  analytics.py  approvals.py  audit.py  auth.py  budgets.py  halts.py  members.py  mfa.py  model_prices.py  password_reset.py  policies.py  project_settings.py  retention.py  sessions.py  spans.py  traces.py  users.py  webhook_deliveries.py  webhook_signing_keys.py
receiver/schemas/: __init__.py  api_keys.py  audit.py  policies.py  responses.py  spans.py
receiver/tests/: conftest.py  test_agent_inventory.py  test_analytics_api.py  test_api_key_scopes.py  test_api_quality.py  test_approvals.py  test_audit_api.py  test_audit_canonical.py  test_audit_hash_chain.py  test_audit_redaction.py  test_audit_repository.py  test_audit_scim_filter.py  test_audit_worker.py  test_auth.py  test_auth_hardening.py  test_auth_repository.py  test_batch_policies.py  test_budget_monitor.py  test_budgets_api.py  test_budgets_repository.py  test_compliance_export.py  test_cost_forecast.py  test_costs_and_policy_metrics.py  test_dashboard_convenience.py  test_data_export.py  test_egress_proxy.py  test_encryption.py  test_github_integration.py  test_halts_api.py  test_halts_repository.py  test_incident_detector.py  test_ingest_cost.py  test_ingest_redaction.py  test_input_validation.py  test_key_rotation.py  test_mcp_gateway.py  test_metric_emissions.py  test_metrics.py  test_mfa_password_reset.py  test_model_prices_api.py  (+46 more)
receiver/webhooks/: __init__.py  actor.py  broker.py  dispatch.py  keystore.py  signing.py  ssrf_guard.py  sweeper.py
sdk/: LICENSE  README.md  pyproject.toml
sdk/src/strathon/: __init__.py  client.py  config.py  exceptions.py  heartbeat.py
sdk/src/strathon/exporter/: __init__.py  otlp.py
sdk/src/strathon/instrumentation/: __init__.py  anthropic.py  autogen.py  claude_agent.py  crewai.py  google_adk.py  langchain.py  langgraph.py  openai.py  openai_agents.py  pydantic_ai.py
sdk/src/strathon/intervention/: __init__.py  hooks.py
sdk/src/strathon/policy/: __init__.py  approval.py  enforcer.py  expression.py  halt_enforcer.py  steer.py  throttle.py  types.py
sdk/tests/: test_allow_list_mode.py  test_approval_sdk.py  test_crewai.py  test_crewai_intervention.py  test_enforcement_matrix.py  test_fail_closed.py  test_framework_upgrades.py  test_google_adk.py  test_halt_enforcer.py  test_instrumentation_hooks.py  test_instrumentation_stubs.py  test_langgraph.py  test_openai_agents.py  test_openai_agents_intervention.py  test_openai_agents_steer.py  test_phase1b_upgrades.py  test_policy_enforcer.py  test_policy_expression.py  test_policy_integration.py  test_policy_time.py  test_pydantic_ai.py  test_smoke.py  test_steer.py  test_steer_halt.py  test_throttle.py
(+153 files in other folders)
