[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strathon-cli"
version = "1.0.1"
description = "CLI for Strathon, the open-source AI agent firewall."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Strathon", email = "security@getstrathon.com"}]
keywords = ["ai", "agents", "firewall", "security", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
]

[project.scripts]
strathon = "strathon_cli.main:cli"

[project.urls]
Homepage = "https://getstrathon.com"
Repository = "https://github.com/strathon/strathon"
Documentation = "https://getstrathon.com/docs"
