[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strathon-cli"
version = "1.2.0"
description = "CLI for Strathon, the open-source AI agent firewall."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "Strathon", email = "hello@getstrathon.com"}]
keywords = ["ai", "agents", "firewall", "security", "cli", "llm", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "click>=8.1",
    "httpx>=0.27",
    "rich>=13.0",
    "pyyaml>=6.0",
]

[project.scripts]
strathon = "strathon_cli.main:cli"

[project.urls]
Homepage = "https://getstrathon.com"
Repository = "https://github.com/strathon/strathon"
Documentation = "https://getstrathon.com/docs"
Issues = "https://github.com/strathon/strathon/issues"
Discord = "https://discord.gg/Ta9XRmh4H"
