[project]
name = "strathon-receiver"
version = "0.0.1"
description = "Strathon OTLP receiver and intervention API"
requires-python = ">=3.12"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Kavyansh Shakya" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    # psycopg3 is the canonical driver going forward — used by both
    # Alembic (sync) and the new SQLAlchemy 2.0 async engine.
    "psycopg[binary]>=3.2.0",
    # asyncpg is transitional: main.py, auth.py, policies.py, and retention.py
    # still use it directly. They migrate to AsyncSession over stages 2-5 of
    # the ORM refactor, after which asyncpg can be removed.
    "asyncpg>=0.30.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "opentelemetry-proto>=1.29.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "httpx>=0.28.0",
    "python-multipart>=0.0.18",
    "authlib>=1.4.0",
    "cel-python>=0.4.0",
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
