[build-system]
requires = ["setuptools>=77.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "strathon"
version = "1.1.0"
description = "Open-source AI agent firewall. Blocks dangerous agent tool calls before they execute, with in-process CEL enforcement at the tool-call boundary."
readme = "README.md"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [{name = "Strathon", email = "hello@getstrathon.com"}]
requires-python = ">=3.10"
keywords = ["ai", "agents", "firewall", "security", "llm", "opentelemetry", "cel", "compliance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

dependencies = [
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "httpx>=0.27.0",
    "pydantic>=2.0",
    "cel-python>=0.4.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0.0"]
openai-agents = ["openai-agents>=0.6.0"]
anthropic = ["anthropic>=0.40.0"]
claude-agent = ["claude-agent-sdk>=0.1.0", "anthropic>=0.40.0"]
langchain = ["langchain-core>=0.3.0"]
langgraph = ["langchain-core>=0.3.0"]
crewai = ["crewai>=0.80.0"]
autogen = ["autogen-agentchat>=0.7.0"]
pydantic-ai = ["pydantic-ai-slim>=1.80.0"]
google-adk = ["google-adk>=1.7.0"]
proxy = ["mitmproxy>=11.0"]
all = [
    "openai>=1.0.0",
    "openai-agents>=0.6.0",
    "anthropic>=0.40.0",
    "claude-agent-sdk>=0.1.0",
    "langchain-core>=0.3.0",
    "crewai>=0.80.0",
    "autogen-agentchat>=0.7.0",
    "pydantic-ai-slim>=1.80.0",
    "google-adk>=1.7.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://getstrathon.com"
Repository = "https://github.com/strathon/strathon"
Documentation = "https://getstrathon.com/docs"
Issues = "https://github.com/strathon/strathon/issues"
Discord = "https://discord.gg/Ta9XRmh4H"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
strathon = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.10"
# Agent frameworks are optional dependencies and most ship without type stubs.
# We instrument them at runtime via lazy imports; their absence from the type
# environment is expected, not a defect in our code.
ignore_missing_imports = true

# The instrumentation adapters work by reassigning framework methods
# (monkey-patching) — that is the supported interception mechanism, not an
# accident. mypy flags every such assignment as [method-assign]; we disable
# that code ONLY for the adapter modules, so a stray method reassignment
# anywhere else in the SDK still surfaces.
[[tool.mypy.overrides]]
module = "strathon.instrumentation.*"
disable_error_code = ["method-assign"]
